principal episode por ano lançamento